新增关注feed流，关注用户更新通知，在线离线